# NOTE: THIS FILE IS EXPERIMENTAL FOR THE BAZEL MIGRATION AND NOT USED FOR
# YOUR BUILDS CURRENTLY.
#
# It is not yet the source of truth for your build. If you're looking to modify
# the build file, modify the Android.bp file instead. Do *not* modify this file
# unless you have coordinated with the team managing the Soong to Bazel
# migration.

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

filegroup(
    name = "headers",
    srcs = glob([
        "*.h",
    ]),
    visibility = [
        "//private/google-modules/bluetooth/broadcom:__subpackages__",
        "//private/google-modules/bms:__subpackages__",
        "//private/google-modules/power/reset:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
)

[kernel_module(
    name = "bms-misc.{}".format(kernel_build),
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "Kbuild",
    ]),
    outs = [
        "gvotable.ko",
        "logbuffer.ko",
    ],
    kernel_build = "//private/google-modules/soc/gs:{}".format(kernel_build),
    visibility = [
        "//private/google-modules/bluetooth/broadcom:__subpackages__",
        "//private/google-modules/bms:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
) for kernel_build in [
    "slider",
    "zuma_emulator",
    "zuma_hybrid",
]]
